--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/dommmel/fill-pdf/issues"
   },
-  "homepage": "https://github.com/dommmel/fill-pdf"
+  "homepage": "https://github.com/dommmel/fill-pdf",
+  "dependencies": {
+    "iconv": "^2.1.4",
+    "temp": "^0.8.1"
+  }
 }
