--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 node_js:
+ - "4.2"
  - "0.12"
- - "0.10"
 before_install:
-  - sudo apt-get install pdftk ghostscript
+  - sudo apt-get -qq update
+  - sudo apt-get -y install pdftk ghostscript
