--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/dommmel/fill-pdf",
   "dependencies": {
+    "async": "^2.0.0-rc.6",
     "temp": "~0.8.3"
   },
   "devDependencies": {
