--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/dommmel/fill-pdf",
   "dependencies": {
     "async": "^2.0.0-rc.6",
+    "iconv": "^2.2.1",
     "temp": "~0.8.3"
   },
   "devDependencies": {
