--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Fill out pdf forms",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/mocha/bin/mocha"
+    "test": "node_modules/.bin/mocha test/test.js"
   },
   "repository": {
     "type": "git",
